# roundwood-joinery

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  USAGE.md
.github/workflows/: test_linux_build.yml  test_mac_build.yml  test_windows_build.yml
src/: RoundWoodJoinery.hh  tasks.py
src/Joint/: Joint.cc  Joint.hh
src/RoundwoodJoinery/: CMakeLists.txt  RoundwoodJoinery.hh  roundwood_joinery_binding.cc
src/RoundwoodJoinery/Beam/: Beam.cc  Beam.hh
src/RoundwoodJoinery/Joint/: Joint.cc  Joint.hh
src/RoundwoodJoinery/PointCloud/: PointCloud.cc  PointCloud.hh
src/RoundwoodJoinery/Utils/: Utils.cc  Utils.hh
src/gh_components/RWJ_decompose_beam/: code.py  metadata.json
src/gh_components/RWJ_define_joinery/: code.py  metadata.json
src/gh_components/RWJ_optimize_joint_placement/: code.py  metadata.json
src/invokes/ghcomponentize/: ghcomponentizer.py
src/python_package/: setup.py
src/python_package/roundwood_joinery/: __init__.py
src/tests/: CMakeLists.txt
src/tests/py_binding_test/: basic_smoketest.py  main.py  pyproject.toml  test_playground_in_rhino.py
src/tests/unit_tests/: approximate_transformation.cc  beam_creation.cc  joint_creation.cc  mean_transformation.cc  point_projection_on_joint_face.cc  pointcloud_creation.cc  skeleton_computation.cc  triangle_base_computation.cc
test_files/ply/: cleaned_trunc_00094_subsampled.ply
